2010-12-03  Shujing Zhao  <pearly.zhao@oracle.com>

	* include/sys/procfs.h: Comment the definition of prxmap_t and
	prxmap32_t. They are not be used.
	* libproc/common/Pcontrol.c (Pxcreate): Use ptrace to trace child
	process instead of using signal to control it.
	* libproc/common/Psymtab.c (Pupdate_maps): Change the way to read
	/proc/<pid>/maps, for the file size is zero at Linux.
	* libproc/common/Psymtab.c (Preadauxvec): Change the way to read
	/proc/<pid>/auxv, for the file size is zero at Linux.

	* libproc/common/Pscantext.c (Pscantext): Change the way to read
	/proc/<pid>/maps.

2010-11-24  Shujing Zhao  <pearly.zhao@oracle.com>

	* libproc/common/Pcontrol.c (sig_int): New function used as signal
	handler.
	(Pxcreate): Add signal handler to child process. Use
	/proc/<pid>/mem instead of /proc/<pid>/as, </proc/<pid>/stat instead
	of /proc/<pid>/status and remove to use /proc/<pid>/ctl. Use waitpid
	on the parent process.
	(Pgrab, Preopen, Pstopstatus): Similar with the Pxcreat. Fix the proc
	files and don't use ctl to control the process.

2010-11-16  Shujing Zhao  <pearly.zhao@oracle.com>
	
	* libdtrace/makefile (dt_lex.c): Use "-l" compatibility option to write
	  to the .c file.
	* libdtrace/dt_impl.h: Remove the declaration of yytext for Linux.
	* libdtrace/dt_lex.l: Undefine input() and unput() and define YY_INPUT()
	  macro.

2010-11-05  Shujing Zhao  <pearly.zhao@oracle.com>

	* libdtrace/makefile (dt_errtags.c, dt_names.c): Use sh to run the
	script.

2010-11-04  Shujing Zhao  <pearly.zhao@oracle.com>

	* include/types_various.h (SYS_getpeername, SYS_getsockname and
	SYS_getsockopt): New.
	* include/sys/old_procfs.h: Make old_procfs.h can be included even
	_LP64 is not defined.
	* libdtrace/dt_module.c: Use elf_getshstrndx instead of
	elf_getshdrstrndx.
	* libport/elf.c: Removed.
	* libport/makefile: Remove elf.o and fix the compile option.
	* libproc/common/Psymtab.c: Use elf_getshstrndx and elf_getshnum